--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,4 +11,8 @@ Suggests:
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
+Imports: 
+    dplyr,
+    googlesheets4,
+    magrittr
