--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(get_non_matched_elements)
 export(map_canton_and_country)
 export(map_ds_spatial_units)
 export(map_spatial)
+export(spatial_mapping_country)
 export(statab_canton_country_pattern)
 export(stattab_country_canton_find_match)
 importFrom(magrittr,"%>%")
