--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,13 @@ RoxygenNote: 7.2.3
 Imports: 
     assertthat,
     BFS,
+ Imports: 
+    assertthat,
+    BFS,
     dplyr,
     googlesheets4,
     magrittr,
-    pxRRead,
     tibble,
     tidyr
+Remotes:  
+    SDSC-ORD/pxRRead
