add SQLLite support in order to be able to run queries
the pipeline will be extended to also provide queries with the
table structure and the queries should be put to a test

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,10 +15,12 @@ RoxygenNote: 7.2.3
 Imports: 
     assertthat,
     BFS,
+    DBI,
     dplyr,
     googlesheets4,
     magrittr,
+    RSQLite,
     tibble,
     tidyr
-Remotes:  
+Remotes: 
     SDSC-ORD/pxRRead
