update `NAMESPACE`: rename and add functions to export
some functions for spatial_mappings were renamed
a new function for test running queries is added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,13 @@ S3method(get_read_path,default)
 export("%>%")
 export(create_dataset)
 export(download_data)
+export(filter_and_add_pattern)
 export(get_closest_matches)
 export(get_non_matched_elements)
-export(map_canton_and_country)
 export(map_ds_spatial_units)
 export(map_spatial)
 export(spatial_mapping_country)
-export(statab_canton_country_pattern)
-export(stattab_country_canton_find_match)
+export(stattab_find_match)
+export(stattab_make_pattern)
+export(testrun_queries)
 importFrom(magrittr,"%>%")
