update `DECRIPTION`: add `here`, `DBI` and `RSQLite`
these functions are needed to testrun the queries

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,11 +15,13 @@ RoxygenNote: 7.2.3
 Imports:
     assertthat,
     BFS,
+    DBI,
     dplyr,
     googlesheets4,
+    here,
     magrittr,
-    stringdist,
+    RSQLite,
     tibble,
     tidyr
-Remotes:  
+Remotes: 
     SDSC-ORD/pxRRead
