feature: add read write of table metadata
- the metadata are stored in files `metadata.csv` that belong to the pipeline
- these csv files contain the columns `iten` , `type` (table or field), `language`, `description`
- the function `rw_metadata_table` prefills these files from the datasets, they can then be completed by the user
- if the file already exists, it will be read in unless the user explictely choses to overwrite

Later the files can be collected by another fucntion and added as metadata table in postgres

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(get_closest_matches)
 export(get_non_matched_elements)
 export(map_ds_spatial_units)
 export(map_spatial)
+export(rw_metadata_table)
 export(spatial_mapping_country)
 export(stattab_find_match)
 export(stattab_make_pattern)
