feature: make sample of datasest

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(get_read_path,bfs)
 S3method(get_read_path,default)
 export("%>%")
 export(create_dataset)
+export(dataset_sample)
 export(download_data)
 export(filter_and_add_pattern)
 export(get_closest_matches)
