metadata templates: prefill example_values with velues from sample
the metadata for table columns has a field `example_values`. This
filed is prefilled by getting 3 values from the sample of the data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(dataset_sample)
 export(download_data)
 export(filter_and_add_pattern)
 export(get_closest_matches)
+export(get_examples)
 export(get_non_matched_elements)
 export(map_ds_spatial_units)
 export(map_spatial)
