feat: rebuild pkg w/ map_ds_municipalities

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(filter_and_add_pattern)
 export(get_closest_matches)
 export(get_examples)
 export(get_non_matched_elements)
+export(map_ds_municipalities)
 export(map_ds_spatial_units)
 export(map_spatial)
 export(read_write_metadata_tables)
@@ -17,4 +18,6 @@ export(spatial_mapping_country)
 export(stattab_find_match)
 export(stattab_make_pattern)
 export(testrun_queries)
+import(dplyr)
+import(rlang)
 importFrom(magrittr,"%>%")
