--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(filter_and_add_pattern)
 export(get_closest_matches)
 export(get_examples)
 export(get_non_matched_elements)
+export(load_dataset_list)
 export(map_ds_municipalities)
 export(map_ds_spatial_units)
 export(map_spatial)
