setup: adapt setup to postgres integration
add new dependencies: RPostgres and Dotenv,
add new functions, adapt .gitignore so that environment variables
are excluded from version control, add example .env file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,11 +16,13 @@ Imports:
     assertthat,
     BFS,
     DBI,
+    dotenv,
     dplyr,
     DT,
     here,
     magrittr,
     rio,
+    RPostgres,
     RSQLite,
     shiny,
     tibble,
