--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,18 +3,22 @@
 S3method(get_read_path,bfs)
 S3method(get_read_path,default)
 export("%>%")
+export(adapt_query_to_schema)
 export(create_dataset)
+export(create_postgres_table)
 export(dataset_sample)
 export(download_data)
 export(filter_and_add_pattern)
+export(generate_metadata_templates)
 export(get_closest_matches)
-export(get_examples)
 export(get_non_matched_elements)
 export(load_dataset_list)
+export(load_spatial_map)
 export(map_ds_municipalities)
 export(map_ds_spatial_units)
 export(map_spatial)
-export(read_write_metadata_tables)
+export(postgres_db_connect)
+export(read_metadata_tables)
 export(spatial_mapping_country)
 export(stattab_find_match)
 export(stattab_make_pattern)
