--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,18 +11,24 @@ export(download_data)
 export(filter_and_add_pattern)
 export(generate_metadata_templates)
 export(get_closest_matches)
+export(get_metadata_from_postgres)
 export(get_non_matched_elements)
+export(intial_setup_of_metadata_tables)
 export(load_dataset_list)
 export(load_spatial_map)
 export(map_ds_municipalities)
 export(map_ds_spatial_units)
 export(map_spatial)
 export(postgres_db_connect)
-export(read_metadata_tables)
+export(read_metadata_tables_from_file)
+export(run_postgres_query)
 export(spatial_mapping_country)
 export(stattab_find_match)
 export(stattab_make_pattern)
 export(testrun_queries)
+export(update_metadata_in_postgres)
+export(update_pipeline_last_run_date)
+export(upload_spatial_units_to_postgres)
 import(dplyr)
 import(rlang)
 importFrom(magrittr,"%>%")
