remove unused function `get_column_types`
and export more function that handle metadata in postgres

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(adapt_query_to_schema)
 export(create_dataset)
 export(create_postgres_table)
 export(dataset_sample)
+export(delete_metadata_from_postgres)
 export(download_data)
 export(filter_and_add_pattern)
 export(generate_metadata_templates)
@@ -29,6 +30,7 @@ export(testrun_queries)
 export(update_metadata_in_postgres)
 export(update_pipeline_last_run_date)
 export(upload_spatial_units_to_postgres)
+export(write_metadata_to_postgres)
 import(dplyr)
 import(rlang)
 importFrom(magrittr,"%>%")
