feat(spatial): add residential area mapper

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(list_tables_with_metadata_in_statbot_db)
 export(load_dataset_list)
 export(load_spatial_map)
 export(map_ds_municipalities)
+export(map_ds_residential_areas)
 export(map_ds_spatial_units)
 export(map_spatial)
 export(postgres_db_connect)
